--- a/index.html
+++ b/index.html
@@ -5,199 +5,160 @@
   <title>Short Description Generator</title>
   <style>
     body {
-      background-color: #000;
-      color: #cfcfcf;
-      font-family: monospace;
-      padding: 30px;
+      background-color: #300a24;
+      color: #eeeeec;
+      font-family: 'Ubuntu Mono', 'Courier New', Courier, monospace;
+      padding: 20px;
     }
 
     h2 {
-      color: #7fff7f;
+  color: #3ec46d;
+      text-align: center;
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+
+    .section {
+      background-color: #300a24;
+      padding: 20px;
+      border-radius: 8px;
     }
 
     .field-group {
-      display: flex;
-      align-items: center;
-      margin: 10px 0;
+      margin-bottom: 15px;
     }
 
     .prompt {
-      color: #7fff7f;
-      margin-right: 5px;
-      min-width: 80px;
-    }
-
-    input {
-      background-color: #000 !important;
-      color: #cfcfcf;
-      border: none;
-      border-bottom: 1px dashed #555;
-      outline: none;
-      padding: 5px;
-      width: 100%;
-      font-family: inherit;
-      font-size: 16px;
-    }
-
-    input:focus {
-      border-bottom: 1px dashed #7fff7f;
-    }
-
-    input::selection {
-      background-color: #333;
-      color: #7fff7f;
-    }
-
-    .paste-button {
-      margin-left: 10px;
-      padding: 4px 10px;
-      font-size: 14px;
-      cursor: pointer;
-      background-color: transparent;
-      color: #7fff7f;
-      border: 1px solid #7fff7f;
-      font-family: inherit;
-    }
-
-    .paste-button:hover {
-      background-color: #7fff7f;
-      color: #000;
-    }
-
-    textarea {
-      background-color: #111;
-      color: #7fff7f;
-      border: 1px solid #7fff7f;
-      padding: 10px;
-      font-family: inherit;
-      font-size: 16px;
-      width: calc(100% - 120px);
-      resize: none;
-      height: 60px;
       display: inline-block;
-      vertical-align: middle;
+      margin-right: 10px;
     }
 
-    textarea:focus {
-      outline: none;
-      border: 1px solid #00ff99;
+    .prompt .tilde {
+      color: #729fcf; /* Azul */
     }
 
+    .prompt .resto {
+      color: #eeeeec; /* Blanco */
+    }
+
+    input[type="text"] {
+      background-color: #000;
+      color: #eeeeec;
+      border: 1px solid #888a85;
+      padding: 5px;
+      width: 300px;
+    }
+
+    .paste-button,
     button {
-      background-color: transparent;
-      color: #7fff7f;
-      border: 1px solid #7fff7f;
-      padding: 6px 14px;
+      background-color: #2e3436;
+      color: #eeeeec;
+      border: 1px solid #888a85;
+      padding: 5px 10px;
+      margin-left: 10px;
       cursor: pointer;
-      font-family: inherit;
-      font-size: 15px;
-      margin-top: 10px;
     }
 
+    .paste-button:hover,
     button:hover {
-      background-color: #7fff7f;
-      color: #000;
+      background-color: #555753;
     }
 
     .resultado-container {
-      margin-top: 15px;
+      margin-top: 20px;
     }
 
     .resultado-bar {
       display: flex;
       align-items: center;
       gap: 10px;
+      margin-top: 5px;
     }
 
-    .copiado-msg {
-      margin-top: 10px;
-      font-size: 14px;
-      color: #7fff7f;
-      display: none;
-    }
-
-    .section {
-      max-width: 700px;
+    textarea {
+      background-color: #000;
+      color: #eeeeec;
+      border: 1px solid #888a85;
+      width: 100%;
+      height: 100px;
+      resize: none;
+      padding: 10px;
     }
   </style>
 </head>
+
 <body>
 
   <h2>Short Description Generator</h2>
 
   <div class="section">
     <div class="field-group">
-      <span class="prompt">$ Nº OFERTA:</span>
+      <span class="prompt"><span class="tilde">~</span><span class="resto">:$ Nº OFERTA:</span></span>
       <input type="text" id="oferta">
       <button class="paste-button" onclick="pegar('oferta')">Pegar</button>
     </div>
     <div class="field-group">
-      <span class="prompt">$ PIEZA:</span>
+      <span class="prompt"><span class="tilde">~</span><span class="resto">:$ PIEZA:</span></span>
       <input type="text" id="pieza">
       <button class="paste-button" onclick="pegar('pieza')">Pegar</button>
     </div>
     <div class="field-group">
-      <span class="prompt">$ DESCRIPCIÓN:</span>
+      <span class="prompt"><span class="tilde">~</span><span class="resto">:$ DESCRIPCIÓN:</span></span>
       <input type="text" id="descripcion">
       <button class="paste-button" onclick="pegar('descripcion')">Pegar</button>
     </div>
     <div class="field-group">
-      <span class="prompt">$ PROYECTO:</span>
+      <span class="prompt"><span class="tilde">~</span><span class="resto">:$ PROYECTO:</span></span>
       <input type="text" id="proyecto">
       <button class="paste-button" onclick="pegar('proyecto')">Pegar</button>
     </div>
     <div class="field-group">
-      <span class="prompt">$ PRECIO UNITARIO:</span>
+      <span class="prompt"><span class="tilde">~</span><span class="resto">:$ PRECIO UNITARIO:</span></span>
       <input type="text" id="precio">
       <button class="paste-button" onclick="pegar('precio')">Pegar</button>
     </div>
 
+    <span class="prompt"><span class="tilde"></span><span class="resto"></span></span>
     <button onclick="generarDescripcion()">Generar Descripción</button>
 
     <div class="resultado-container">
-      <span class="prompt">$ Resultado:</span><br>
+      <span class="prompt"><span class="tilde">~</span><span class="resto">:$ Resultado:</span></span>
       <div class="resultado-bar">
         <textarea id="resultado" readonly></textarea>
         <button onclick="copiarAlPortapapeles()">Copiar</button>
       </div>
-      <div id="copiado" class="copiado-msg">✅ Copiado al portapapeles</div>
     </div>
   </div>
 
   <script>
+    function pegar(id) {
+      navigator.clipboard.readText()
+        .then(text => {
+          document.getElementById(id).value = text;
+        })
+        .catch(err => {
+          console.error('Error al pegar desde el portapapeles:', err);
+        });
+    }
+
     function generarDescripcion() {
-      const oferta = document.getElementById("oferta").value.trim();
-      const pieza = document.getElementById("pieza").value.trim();
-      const descripcion = document.getElementById("descripcion").value.trim();
-      const proyecto = document.getElementById("proyecto").value.trim();
-      const precio = document.getElementById("precio").value.trim();
+  const oferta = document.getElementById('oferta').value.trim().replace(/\s+/g, '_');
+  const pieza = document.getElementById('pieza').value.trim().replace(/\s+/g, '_');
+  const descripcion = document.getElementById('descripcion').value.trim().replace(/\s+/g, '_');
+  const proyecto = document.getElementById('proyecto').value.trim().replace(/\s+/g, '_');
+  const precio = document.getElementById('precio').value.trim().replace(/\s+/g, '_');
 
-      const resultado = `${oferta}_${pieza}_${descripcion}_${proyecto}_${precio}`;
-      document.getElementById("resultado").value = resultado;
-      document.getElementById("copiado").style.display = "none";
-    }
-
+  const resultado = `${oferta}_${pieza}_${descripcion}_${proyecto}_${precio}`;
+  document.getElementById('resultado').value = resultado;
+  }
     function copiarAlPortapapeles() {
-      const texto = document.getElementById("resultado");
-      texto.select();
-      texto.setSelectionRange(0, 99999);
-      document.execCommand("copy");
+  const resultado = document.getElementById('resultado').value;
+  navigator.clipboard.writeText(resultado).catch(err => {
+    console.error("Error al copiar:", err);
+  });
+}
 
-      const msg = document.getElementById("copiado");
-      msg.style.display = "block";
-      setTimeout(() => {
-        msg.style.display = "none";
-      }, 2000);
-    }
-
-    async function pegar(campoId) {
-      try {
-        const texto = await navigator.clipboard.readText();
-        document.getElementById(campoId).value = texto;
-      } catch (err) {
-        alert("⚠️ No se pudo acceder al portapapeles.");
-      }
-    }
   </script>
 
 </body>
